src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0004.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram CD4AC0004 {
  class A;
  class B;
  interface A;
  class B;
  enum C;
  class C;
}